Stopped hidden gems being visible if eyepods flickered at start of game

--- a/hitthediamond/htd.css
+++ b/hitthediamond/htd.css
@@ -274,6 +274,7 @@
             bottom:150px;
             transform:rotateZ(5deg);
         }
+
         
         .bcb-hit-the-diamond .eyepod:nth-of-type(2n) .gems {
             transform:rotateZ(5deg)rotateY(180deg);   
@@ -286,6 +287,12 @@
                 margin-bottom:-500px;
                 transition: all .5s ease-in-out;
             }
+
+		.bcb-hit-the-diamond .eyepod .gems > .gem.init {
+			display:none;
+		}
+
+
                 .bcb-hit-the-diamond .eyepod .gems > .gem.popped {
                      margin-bottom: 0;
                 }
